add PDF Viewer to requirements

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,8 @@
 		"magicstack.magicpython",
 		"almenon.arepl",
 		"visualstudioexptteam.vscodeintellicode",
-		"ms-python.vscode-pylance"
+		"ms-python.vscode-pylance",
+		"tomoki1207.pdf"
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip3 install -r requirements.txt",
